# g3ti-rtcc-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.camera-network.yml  docker-compose.yml
backend/: Dockerfile  README.md  fly.toml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/admin/: __init__.py  api_connections_admin.py  audit_log.py  base_admin.py  cameras_admin.py  drones_admin.py  dv_risk_homes_admin.py  events_admin.py  fire_preplans_admin.py  hydrants_admin.py  incidents_admin.py  infrastructure_admin.py  lpr_zones_admin.py  robots_admin.py  schools_admin.py  sectors_admin.py  system_settings_admin.py  users_admin.py  validation.py
backend/app/admin_logs/: __init__.py  activity_log_api.py  activity_log_model.py  activity_log_service.py
backend/app/ai_engine/: __init__.py  ai_manager.py
backend/app/ai_supervisor/: __init__.py  auto_corrector.py  ethics_guard.py  sentinel_engine.py  system_monitor.py
backend/app/analytics/: __init__.py  heatmaps.py  historical.py  offender_analytics.py
backend/app/api/: __init__.py  deps.py
backend/app/camera_network/: __init__.py  camera_health_monitor.py  camera_ingestion_engine.py  camera_registry.py  fdot_scraper.py  rbpd_mock_loader.py  streaming_adapter.py  video_wall_manager.py
backend/app/cameras/: __init__.py  camera_ingestion_engine.py  fdot_scraper.py  marina_streams.py  mjpeg_streamer.py  pbc_traffic_scraper.py  public_camera_catalog.py  rbpd_mock_loader.py  rtsp_adapter.py
backend/app/case_tools/: __init__.py  case_tools_api.py  case_tools_model.py  case_tools_service.py
backend/app/city_autonomy/: __init__.py  audit_engine.py  policy_engine.py  stabilizer.py
backend/app/city_brain/: __init__.py
backend/app/city_governance/: __init__.py  constitution_engine.py  human_in_loop.py  kpi_engine.py  legislative_kb.py  policy_translator.py  resource_optimizer.py  risk_scoring.py  scenario_simulator.py
backend/app/command/: __init__.py
backend/app/comms/: __init__.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_graph_schema.py  test_websocket.py
(+1455 files in other folders)
